app/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.page-container {
  margin: 0 24px;
  padding: 24px 0;
}

@media (min-width: 640px) {
  .page-container {
    width: clamp(500px, 65%, 1000px);
    max-width: 100%;
    margin: 0 auto;
    padding: 40px 0;
  }
}

a {
  color: hsl(218.5, 79.2%, 36.1%);
}

input {
  border: 1px solid hsl(13, 46.3%, 31.4%);
  border-radius: 6px;
}

@media (prefers-color-scheme: dark) {
  html {
    color: hsl(216, 12.2%, 83.9%);
    background: hsl(220.9, 39.3%, 11%);
  }
  a {
    color: hsl(218.5, 79.2%, 73.1%);
  }
  input {
    background: hsl(215.3, 25%, 26.7%);
    border: none;
  }
}

.menu-item {
  cursor: pointer;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

.menu-item:hover {
  background: hsl(214.3, 31.8%, 91.4%);
}

